<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_title_general_settings" >
        <org.poirsouille.FilePreference
            android:defaultValue="/"
            android:key="pref_key_config_path"
            android:summary="@string/config_path_details"
            android:title="@string/config_path" />
        <EditTextPreference
            android:defaultValue="1000"
            android:key="pref_key_max_log_size"
            android:numeric="integer"
            android:summary="@string/max_log_size_details"
            android:title="@string/max_log_size" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_current_config" android:key="pref_key_config">
    </PreferenceCategory><PreferenceCategory android:title="@string/pref_title_hosts" android:key="pref_key_hosts">
    </PreferenceCategory>

</PreferenceScreen>