<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="click"
            android:text="@string/start" />

        <ToggleButton
            android:id="@+id/debugButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="debugClick"
            android:text="@string/debug"
            android:textOff="@string/debug"
            android:textOn="@string/debug" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="clickClear"
            android:text="@string/button_clear" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="clickStatus"
            android:text="@string/button_status" />

    </LinearLayout>
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/logTextView"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.46"
	            android:ems="10"
	            android:inputType="none"
	            android:textSize="8sp"
	            android:typeface="monospace" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>